// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ColorPalette interactive 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/ColorPalette six colors 1`] = `
Array [
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots components/ColorPalette six colors, value missing 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/ColorPalette six colors, wrap at 4 1`] = `
<div
  className="canvasColorPalette"
>
  <div
    className="item-grid-row"
  >
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        >
          <svg
            className="euiIcon euiIcon--medium selected-color"
            focusable="false"
            height="16"
            style={
              Object {
                "fill": "#333",
              }
            }
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#666",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#000",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abc",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="item-grid-row"
  >
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#def",
            }
          }
        />
      </div>
    </button>
    <button
      className="euiLink euiLink--primary canvasColorPalette__dot"
      onClick={[Function]}
      style={
        Object {
          "fontSize": 0,
        }
      }
      type="button"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#abcdef",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots components/ColorPalette three colors 1`] = `
Array [
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>,
]
`;
